--- a/cart.html
+++ b/cart.html
@@ -211,10 +211,29 @@
     </div>
   </main>
 
-  <footer>
+ <footer>
     <p>&copy; 2025 GrimmDraw | All Rights Reserved</p>
+    <div class="social-links">
+      <a href="https://www.instagram.com/accounts/login/" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/24/2111/2111463.png" alt="Instagram" />
+      </a>
+      <a href="https://twitter.com/login" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/24/3670/3670151.png" alt="Twitter" />
+      </a>
+      <a href="https://accounts.snapchat.com/accounts/login" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/24/3670/3670053.png" alt="Snapchat" />
+      </a>
+      <a href="https://www.tiktok.com/login" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/24/3046/3046121.png" alt="TikTok" />
+      </a>
+      <a href="https://accounts.google.com/ServiceLogin?service=youtube" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/24/3670/3670147.png" alt="YouTube" />
+      </a>
+      <a href="https://www.facebook.com/login" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/24/145/145802.png" alt="Facebook" />
+      </a>
+    </div>
   </footer>
-
   <script>
     function loadCart() {
       const cart = JSON.parse(localStorage.getItem("cart")) || [];
