--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -19,7 +19,7 @@
     }
 
     /* Background wallpapers fixed */
-    .bg-original, .bg-scroll {
+    .bg-original, .bg-scroll, .bg-expand {
       position: fixed;
       top: 0; left: 0;
       width: 100%; height: 100%;
@@ -29,6 +29,7 @@
       transition: opacity 1s ease-in-out;
       pointer-events: none;
       z-index: -3;
+      opacity: 0;
     }
     .bg-original {
       background-image: url('cig wallpaper.jpg');
@@ -37,8 +38,11 @@
     }
     .bg-scroll {
       background-image: url('smoking in dark.jpg');
-      opacity: 0;
       z-index: -2;
+    }
+    .bg-expand {
+      background-image: url('smoke face.jpg');
+      z-index: -1;
     }
 
     /* Header styles */
@@ -157,6 +161,7 @@
   <!-- Background wallpapers -->
   <div class="bg-original"></div>
   <div class="bg-scroll"></div>
+  <div class="bg-expand"></div>
 
   <header>
     <h1>About GrimmDraw</h1>
@@ -183,6 +188,16 @@
         Our founder believed in crafting products that don’t just satisfy but create an experience – one of elegance, character, and refinement.
       </p>
       <img src="jabu.JPG" alt="GrimmDraw Founder" class="founder-image" />
+    </section>
+
+    <section id="expansion">
+      <h2>Expanding Horizons</h2>
+      <p>
+        As GrimmDraw continues to grow, we are excited to expand our range of products and reach new customers worldwide. Innovation, quality, and customer satisfaction remain at the heart of everything we do.
+      </p>
+      <p>
+        It would be our pleasure to grow alongside you, continuing to provide sophisticated experiences for discerning users everywhere.
+      </p>
     </section>
   </main>
 
@@ -213,20 +228,31 @@
   <script>
     const bgOriginal = document.querySelector('.bg-original');
     const bgScroll = document.querySelector('.bg-scroll');
+    const bgExpand = document.querySelector('.bg-expand');
 
     let lastScrollY = window.scrollY;
 
     window.addEventListener('scroll', () => {
       const currentScrollY = window.scrollY;
+      const scrollHeight = document.documentElement.scrollHeight;
+      const clientHeight = document.documentElement.clientHeight;
+      const scrollBottom = currentScrollY + clientHeight;
 
-      if (currentScrollY > lastScrollY) {
-        // Scrolling down: show the scroll wallpaper, hide original
+      if (scrollBottom >= scrollHeight - 100) {
+        // Near bottom: show expansion wallpaper only
+        bgOriginal.style.opacity = '0';
+        bgScroll.style.opacity = '0';
+        bgExpand.style.opacity = '1';
+      } else if (currentScrollY > lastScrollY) {
+        // Scrolling down but not near bottom: show scroll wallpaper
         bgOriginal.style.opacity = '0';
         bgScroll.style.opacity = '1';
+        bgExpand.style.opacity = '0';
       } else {
-        // Scrolling up: revert to original wallpaper
+        // Scrolling up: show original wallpaper
         bgOriginal.style.opacity = '1';
         bgScroll.style.opacity = '0';
+        bgExpand.style.opacity = '0';
       }
 
       lastScrollY = currentScrollY;
