--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
       z-index: -2;
     }
     .bg-expand {
-      background-image: url('smoke face.jpg');
+      background-image: url('smoke in dark.jpg');
       z-index: -1;
     }
 
