--- a/index.html
+++ b/index.html
@@ -339,28 +339,29 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 GrimmDraw | All Rights Reserved</p>
-    <div class="social-links">
-      <a href="https://www.instagram.com/accounts/login/" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/24/2111/2111463.png" alt="Instagram" />
-      </a>
-      <a href="https://twitter.com/login" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/24/3670/3670151.png" alt="Twitter" />
-      </a>
-      <a href="https://accounts.snapchat.com/accounts/login" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/24/3670/3670053.png" alt="Snapchat" />
-      </a>
-      <a href="https://www.tiktok.com/login" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/24/3046/3046121.png" alt="TikTok" />
-      </a>
-      <a href="https://accounts.google.com/ServiceLogin?service=youtube" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/24/3670/3670147.png" alt="YouTube" />
-      </a>
-      <a href="https://www.facebook.com/login" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/24/145/145802.png" alt="Facebook" />
-      </a>
-    </div>
-  </footer>
+  <p>123 GrimmDraw Blvd, Smoketown, ST 54321</p>
+  <p>&copy; 2025 GrimmDraw | All Rights Reserved</p>
+  <div class="social-links">
+    <a href="https://www.instagram.com/accounts/login/" target="_blank">
+      <img src="https://cdn-icons-png.flaticon.com/24/2111/2111463.png" alt="Instagram" />
+    </a>
+    <a href="https://twitter.com/login" target="_blank">
+      <img src="https://cdn-icons-png.flaticon.com/24/3670/3670151.png" alt="Twitter" />
+    </a>
+    <a href="https://accounts.snapchat.com/accounts/login" target="_blank">
+      <img src="https://cdn-icons-png.flaticon.com/24/3670/3670053.png" alt="Snapchat" />
+    </a>
+    <a href="https://www.tiktok.com/login" target="_blank">
+      <img src="https://cdn-icons-png.flaticon.com/24/3046/3046121.png" alt="TikTok" />
+    </a>
+    <a href="https://accounts.google.com/ServiceLogin?service=youtube" target="_blank">
+      <img src="https://cdn-icons-png.flaticon.com/24/3670/3670147.png" alt="YouTube" />
+    </a>
+    <a href="https://www.facebook.com/login" target="_blank">
+      <img src="https://cdn-icons-png.flaticon.com/24/145/145802.png" alt="Facebook" />
+    </a>
+  </div>
+</footer>
 
   <div id="ageVerificationModal">
     <h2>Are you 21 years of age or older?</h2>
