--- a/about.html
+++ b/about.html
@@ -5,98 +5,63 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About Us | GrimmDraw</title>
   <style>
-  
     * {
       margin: 0; padding: 0; box-sizing: border-box;
     }
-    html, body {
-      height: 100%;
+
+    body {
       font-family: Arial, sans-serif;
       color: white;
+      background: black;
       overflow-x: hidden;
-      scroll-behavior: smooth;
-      background: none;
     }
 
-    .bg-original, .bg-scroll, .bg-expand {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background-position: center center;
-      background-repeat: no-repeat;
-      background-size: cover;
-      transition: opacity 1s ease-in-out;
-      pointer-events: none;
-      z-index: -3;
-      opacity: 0;
-    }
-    .bg-original {
-      background-image: url('cig wallpaper.jpg');
-      opacity: 1;
-      z-index: -3;
-    }
-    .bg-scroll {
-      background-image: url('smoking in dark.jpg');
-      z-index: -2;
-    }
-    .bg-expand {
-      background-image: url('white guy with cig.jpg');
-      z-index: -1;
+    header, nav, footer {
+      position: relative;
+      z-index: 10;
     }
 
-    
     header {
       background: rgba(0, 0, 0, 0.7);
       padding: 20px;
       font-size: 2rem;
       font-weight: bold;
       text-align: center;
-      position: relative;
-      z-index: 10;
     }
 
-   
     nav {
       background: black;
       padding: 15px;
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
-      width: 100%;
-      position: relative;
-      z-index: 10;
-    }
-    .nav-links {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-wrap: wrap;
       gap: 20px;
     }
+
     .nav-links a {
       color: white;
       text-decoration: none;
       font-size: 1.1rem;
       font-weight: bold;
-      white-space: nowrap;
     }
+
     .nav-links a:hover {
       color: #f8c471;
       text-decoration: underline;
     }
 
-    
     .main-content {
       max-width: 900px;
-      margin: 50px auto 80px;
-      padding: 0 20px;
-      background: rgba(0,0,0,0.6);
+      margin: 60px auto 120px;
+      padding: 20px;
+      background: rgba(0, 0, 0, 0.6);
       border-radius: 10px;
       box-shadow: 0 0 20px rgba(255,255,255,0.2);
+      position: relative;
+      z-index: 10;
     }
 
     section {
-      padding: 30px 20px;
       margin-bottom: 40px;
     }
 
@@ -104,6 +69,7 @@
       font-size: 2rem;
       margin-bottom: 15px;
     }
+
     section p {
       font-size: 1.1rem;
       line-height: 1.6;
@@ -114,77 +80,100 @@
       max-width: 100%;
       border-radius: 10px;
       box-shadow: 0 0 15px rgba(255,255,255,0.3);
-      display: block;
       margin-top: 20px;
     }
 
-  
     footer {
       background: rgba(0, 0, 0, 0.8);
       padding: 15px;
       font-size: 0.9rem;
       text-align: center;
       color: #ccc;
-      position: relative;
-      z-index: 10;
     }
 
-   
+    .social-links img {
+      width: 24px;
+      height: 24px;
+      margin: 0 5px;
+    }
+
+    .background-container {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100vh;
+      z-index: -1;
+      overflow: hidden;
+    }
+
+    .bg-image {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background-position: center center;
+      background-size: cover;
+      opacity: 0;
+      transition: opacity 1s ease-in-out;
+    }
+
+    .bg-image.active {
+      opacity: 1;
+    }
+
+    /* Mobile adjustments */
     @media (max-width: 768px) {
       header {
         font-size: 1.5rem;
-        padding: 15px;
       }
-      nav {
-        padding: 10px;
+      .nav-links {
+        gap: 12px;
+        flex-wrap: wrap;
+        justify-content: center;
       }
       .nav-links a {
         font-size: 1rem;
-        padding: 6px 8px;
       }
       .main-content {
         margin: 30px 15px 60px;
         padding: 20px;
-      }
-      section h2 {
-        font-size: 1.5rem;
-      }
-      section p {
-        font-size: 1rem;
       }
     }
   </style>
 </head>
 <body>
 
- 
-  <div class="bg-original"></div>
-  <div class="bg-scroll"></div>
-  <div class="bg-expand"></div>
+  <!-- Backgrounds -->
+  <div class="background-container">
+    <div class="bg-image bg1 active" style="background-image: url('cig wallpaper.jpg');"></div>
+    <div class="bg-image bg2" style="background-image: url('smoking in dark.jpg');"></div>
+    <div class="bg-image bg3" style="background-image: url('white guy with cig.jpg');"></div>
+  </div>
 
+  <!-- Header & Nav -->
   <header>
     <h1>About GrimmDraw</h1>
   </header>
 
-  <nav>
-    <div class="nav-links">
-      <a href="index.html">Home</a>
-      <a href="product.html">Product</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-      <a href="feedback.html">Feedback</a>
-      <a href="cart.html">🛒 Cart: <span id="cart-count">0</span></a>
-    </div>
+  <nav class="nav-links">
+    <a href="index.html">Home</a>
+    <a href="product.html">Product</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+    <a href="feedback.html">Feedback</a>
+    <a href="cart.html">🛒 Cart: <span id="cart-count">0</span></a>
   </nav>
 
+  <!-- Main Content -->
   <main class="main-content">
     <section id="origins">
       <h2>Our Origins</h2>
       <p>
-        GrimmDraw began as a humble dream fueled by passion and dedication to the art of nicotine craftsmanship. Founded by a visionary with an unwavering commitment to quality, the company honors the rich traditions of smoking culture while embracing innovation for modern tastes.
+        GrimmDraw began as a humble dream fueled by passion and dedication to the art of nicotine craftsmanship.
+        Founded by a visionary with an unwavering commitment to quality, the company honors the rich traditions
+        of smoking culture while embracing innovation for modern tastes.
       </p>
       <p>
-        Our founder believed in crafting products that don’t just satisfy but create an experience – one of elegance, character, and refinement.
+        Our founder believed in crafting products that don’t just satisfy but create an experience – one of elegance,
+        character, and refinement.
       </p>
       <img src="jabu.JPG" alt="GrimmDraw Founder" class="founder-image" />
     </section>
@@ -192,71 +181,48 @@
     <section id="expansion">
       <h2>Expanding Horizons</h2>
       <p>
-        As GrimmDraw continues to grow, we are excited to expand our range of products and reach new customers worldwide. Innovation, quality, and customer satisfaction remain at the heart of everything we do.
+        As GrimmDraw continues to grow, we are excited to expand our range of products and reach new customers worldwide.
+        Innovation, quality, and customer satisfaction remain at the heart of everything we do.
       </p>
       <p>
-        It would be our pleasure to grow alongside you, continuing to provide sophisticated experiences for discerning users everywhere.
+        It would be our pleasure to grow alongside you, continuing to provide sophisticated experiences for discerning
+        users everywhere.
       </p>
     </section>
   </main>
 
+  <!-- Footer -->
   <footer>
     <p>&copy; 2025 GrimmDraw | All Rights Reserved</p>
     <div class="social-links">
-      <a href="https://www.instagram.com/accounts/login/" target="_blank" rel="noopener noreferrer">
-        <img src="https://cdn-icons-png.flaticon.com/24/2111/2111463.png" alt="Instagram" />
-      </a>
-      <a href="https://twitter.com/login" target="_blank" rel="noopener noreferrer">
-        <img src="https://cdn-icons-png.flaticon.com/24/3670/3670151.png" alt="Twitter" />
-      </a>
-      <a href="https://accounts.snapchat.com/accounts/login" target="_blank" rel="noopener noreferrer">
-        <img src="https://cdn-icons-png.flaticon.com/24/3670/3670053.png" alt="Snapchat" />
-      </a>
-      <a href="https://www.tiktok.com/login" target="_blank" rel="noopener noreferrer">
-        <img src="https://cdn-icons-png.flaticon.com/24/3046/3046121.png" alt="TikTok" />
-      </a>
-      <a href="https://accounts.google.com/ServiceLogin?service=youtube" target="_blank" rel="noopener noreferrer">
-        <img src="https://cdn-icons-png.flaticon.com/24/3670/3670147.png" alt="YouTube" />
-      </a>
-      <a href="https://www.facebook.com/login" target="_blank" rel="noopener noreferrer">
-        <img src="https://cdn-icons-png.flaticon.com/24/145/145802.png" alt="Facebook" />
-      </a>
+      <a href="https://www.instagram.com/accounts/login/" target="_blank"><img src="https://cdn-icons-png.flaticon.com/24/2111/2111463.png" alt="Instagram" /></a>
+      <a href="https://twitter.com/login" target="_blank"><img src="https://cdn-icons-png.flaticon.com/24/3670/3670151.png" alt="Twitter" /></a>
+      <a href="https://accounts.snapchat.com/accounts/login" target="_blank"><img src="https://cdn-icons-png.flaticon.com/24/3670/3670053.png" alt="Snapchat" /></a>
+      <a href="https://www.tiktok.com/login" target="_blank"><img src="https://cdn-icons-png.flaticon.com/24/3046/3046121.png" alt="TikTok" /></a>
+      <a href="https://accounts.google.com/ServiceLogin?service=youtube" target="_blank"><img src="https://cdn-icons-png.flaticon.com/24/3670/3670147.png" alt="YouTube" /></a>
+      <a href="https://www.facebook.com/login" target="_blank"><img src="https://cdn-icons-png.flaticon.com/24/145/145802.png" alt="Facebook" /></a>
     </div>
   </footer>
 
   <script>
-    const bgOriginal = document.querySelector('.bg-original');
-    const bgScroll = document.querySelector('.bg-scroll');
-    const bgExpand = document.querySelector('.bg-expand');
-
-    let lastScrollY = window.scrollY;
+    const bgImages = document.querySelectorAll('.bg-image');
 
     window.addEventListener('scroll', () => {
-      const currentScrollY = window.scrollY;
-      const scrollHeight = document.documentElement.scrollHeight;
-      const clientHeight = document.documentElement.clientHeight;
-      const scrollBottom = currentScrollY + clientHeight;
+      const scrollY = window.scrollY;
+      const docHeight = document.body.scrollHeight - window.innerHeight;
+      const scrollPercent = scrollY / docHeight;
 
-      if (scrollBottom >= scrollHeight - 100) {
-        // Near bottom: show expansion wallpaper only
-        bgOriginal.style.opacity = '0';
-        bgScroll.style.opacity = '0';
-        bgExpand.style.opacity = '2';
-      } else if (currentScrollY > lastScrollY) {
-        // Scrolling down but not near bottom: show scroll wallpaper
-        bgOriginal.style.opacity = '0';
-        bgScroll.style.opacity = '2';
-        bgExpand.style.opacity = '0';
-      } else {
-        // Scrolling up: show original wallpaper
-        bgOriginal.style.opacity = '2';
-        bgScroll.style.opacity = '0';
-        bgExpand.style.opacity = '0';
+      let index = 0;
+      if (scrollPercent > 0.66) {
+        index = 2;
+      } else if (scrollPercent > 0.33) {
+        index = 1;
       }
 
-      lastScrollY = currentScrollY;
+      bgImages.forEach((bg, i) => {
+        bg.classList.toggle('active', i === index);
+      });
     });
   </script>
-
 </body>
 </html>
