--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
 
       <div class="staggered-section">
         <div class="image-text fade-in-left">
-          <img src="images/growth.jpg" alt="Company Growth" />
+          <img src="one world.png" alt="Company Growth" />
           <div>
             <h3>Our Growth</h3>
             <p>From local pop-ups to global shipping, we’ve scaled with style and purpose, staying true to our roots.</p>
@@ -97,7 +97,7 @@
         </div>
 
         <div class="image-text reverse fade-in-right">
-          <img src="images/community.jpg" alt="Community" />
+          <img src="woman holding vape.png" alt="Community" />
           <div>
             <h3>Community First</h3>
             <p>We thrive because of our people. Our community is at the heart of everything we create and celebrate.</p>
@@ -105,7 +105,7 @@
         </div>
 
         <div class="image-text fade-in-left">
-          <img src="images/innovation.jpg" alt="Innovation" />
+          <img src="3 people.png" alt="Innovation" />
           <div>
             <h3>Innovating Daily</h3>
             <p>Design, function, and storytelling evolve constantly — and we evolve with them, bringing fresh ideas to life.</p>
