--- a/about.html
+++ b/about.html
@@ -113,7 +113,7 @@
         </div>
 
         <div class="image-text reverse fade-in-right">
-          <img src="images/vision.jpg" alt="Vision" />
+          <img src="green vape.png" alt="Vision" />
           <div>
             <h3>Our Vision</h3>
             <p>We envision a future where creativity breaks barriers. Our mission is to craft experiences that resonate far beyond the surface.</p>
@@ -121,7 +121,7 @@
         </div>
 
         <div class="image-text fade-in-left">
-          <img src="images/impact.jpg" alt="Impact" />
+          <img src="2 guys working.png" alt="Impact" />
           <div>
             <h3>Real Impact</h3>
             <p>Whether through sustainability, culture, or connection — everything we do aims to make a difference.</p>
