--- a/about.html
+++ b/about.html
@@ -243,7 +243,7 @@
         </div>
 
         <div class="image-text reverse fade-in-right">
-          <img src="woman holding vape.png" alt="Community" />
+          <img src="woman holding vape.png" alt="purpose" />
           <div>
 
         <div class="image-text fade-in-left">
