--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -243,8 +243,12 @@
         </div>
 
         <div class="image-text reverse fade-in-right">
-          <img src="woman holding vape.png" alt="purpose" />
+          <img src="woman holding vape.png" alt="Purpose" />
           <div>
+            <h3>Purpose Driven</h3>
+            <p>We stand for expression and boldness. Every product is a reflection of our mission to inspire creativity and individuality.</p>
+          </div>
+        </div>
 
         <div class="image-text fade-in-left">
           <img src="3 people.png" alt="Innovation" />
@@ -267,6 +271,15 @@
           <div>
             <h3>Real Impact</h3>
             <p>Whether through sustainability, culture, or connection — everything we do aims to make a difference.</p>
+          </div>
+        </div>
+
+        <!-- ✅ Enforced Community Section -->
+        <div class="image-text reverse fade-in-right">
+          <img src="community support.png" alt="Community" />
+          <div>
+            <h3>Community First</h3>
+            <p>At GrimmDraw, we’re built by and for the community. Our strength lies in connection, support, and a shared passion that unites us.</p>
           </div>
         </div>
       </div>
