--- a/about.html
+++ b/about.html
@@ -274,9 +274,8 @@
           </div>
         </div>
 
-        <!-- ✅ Enforced Community Section -->
         <div class="image-text reverse fade-in-right">
-          <img src="community support.png" alt="Community" />
+          <img src="hands.png" alt="Community" />
           <div>
             <h3>Community First</h3>
             <p>At GrimmDraw, we’re built by and for the community. Our strength lies in connection, support, and a shared passion that unites us.</p>
